<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">推聊</string>
    <string name="register_tip">提示 :以上均为必选项!</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="left_title_name">好友列表</string>
    <string name="center_title_name">最近会话</string>
    <string name="right_title_name">设置</string>
    <string name="no_chat">暂时没有新消息</string>
     <string name="versionnum">V1.2.3</string>
    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="searchdialog_find_contact_new">搜索</string>
    <string name="first_start_title">初始化设置</string>
    <string name="first_start_tips">昵称不能为空哦</string>
    <string name="first_start_scuess">连接服务器成功</string>
    <string name="first_start_dialog_text">连接服务器...</string>
    <string name="isSingle">单身</string>
    <string name="info_info">个人资料</string>
    <string name="face_jazz_effects">表情翻页效果</string>
    <string name="set_push">消息通知</string>
    <string name="sound_and_vibrate">声音</string>
    <string name="new_msg_notify">新消息提醒</string>
    <string name="setting_display">界面</string>
    <string name="logout_account">注销登录</string>
    <string name="security_and_privacy">安全和隐私</string>
    <string name="logout_exit_account">退出当前帐号</string>
    <string name="pref_assistant">辅助功能</string>
    <string name="delete_friend_confirm">确定删除%1$s吗？</string>
    <string name="menu_about">关于</string>
    <string name="set_message_notify">通知栏挂机图标</string>
    <string name="set_pullrefresh_sound">刷新提示音</string>
    <string name="set_message_sound">新消息声音提醒</string>
    <string name="set_show_head">聊天显示自己头像</string>
    <string name="set_acount_info">个人资料</string>
    <string name="set_face_jazz">表情滑动效果</string>
    <string name="press_again_backrun">再按一次后台运行</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="app_is_run_background">推聊正在后台运行</string>
    <string name="user_agreement">way</string>
    <string name="official_website">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="feedback_suggest">帮助与反馈</string>
    <string name="qq_impression">手机QQ印象</string>
    <string name="version_upgrade">版本更新</string>
    <string name="feature_info">功能介绍</string>
    <string name="QQS_weibo">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="all_rights_reserved">Copyright © 2012-2013 Way. All Rights Reserved.</string>
    <string name="my_blog_url">http://blog.csdn.net/weidi1989</string>
    <string name="my_email">way.ping.li@gmail.com</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本应用是基于百度云推送的一款轻量级聊天工具，包含多个开源项目库，同时本代码也已经开源，欢迎访问我的博客主页：%1$s，由于时间仓促，错误与疏忽之处在所难免，希望各位朋友们以邮件的形式反馈问题给我，再次表示感谢！</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
    <string name="submit_report">提交报告</string>
    <string name="rename">备注名</string>
    <string name="move">移动到</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>
    <string name="exit_confirm_toast">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;确定退出吗？退出后不会删除任何历史数据，只是不再给您推送消息，下次需要重新登录</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
	<string name="setting_about_description">弹指间，心无间！</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

</resources>